STELLA, CHANGES

#### 2.1.0 (2011-07-06) ###############################

* FIXED: Different CLI output when a testplan is specified
* ADDED: Handle bad or missing api credentials
* CHANGE: Default output is now CLI (use -F json)
* CHANGE: Global -f is now -u (for usecase)
* CHANGE: Global -F is now -f (output format)


#### 2.0.3 (2011-07-06) ###############################

* ADDED: Stella::API
* ADDED: --remote global for running checkups via www.blamestella.com (beta)


#### 2.0.2 (2011-06-09) ###############################

* FIXED: Gibbler ID fixes
* ADDED: --wait option for checkup command
* CHANGE: Don't freeze testplan


#### 2.0.1 (2011-06-08) ###############################

NOTE: First release of 2.x.


#### 0.8.X (XXXX-XX-XX) ###############################

NOTE: We're now focusing our effort on 2.0, so these features are still 
      outstanding for a 1.x release (they probably won't be worked on).

* TODO: Force response block content type. 
* TODO: Add option to dump full request/response output to a file by client
* TODO: review cookie handling. Not always sent automatically. 
* TODO: review :variables in URI elements
* TODO: global responses
* TODO: request block conditions. 
* TODO: process templates for calls to set in get blocks

#### 0.8.8 (2011-02-26) ###############################

* FIXED: Require benelux 0.5.17 (fixed for Ruby 1.9.2)

#### 0.8.7.002 (2010-06-14) ###############################

* FIXED: Specifying a host w/ a path and no testplan no longer doubles up the path
* ADDED: Global HTTP client timeout ("stella -T 60")
* CHANGE: Timeouts are reported as exceptions. 


#### 0.8.7 (2010-05-21) ###############################

* FIXED: sequential, rsequential, and random values were broken for Arrays
* FIXED: Support for supplying test durations in the form "5m" (300 seconds)
* CHANGE: Enforce port 443 if port 80 and scheme is HTTPS. 


#### 0.8.6 (2010-04-14) ###############################
