@@ -45,6 +45,8 @@ class Stella::CLI::Definition
   #global :P, :withparam, "Include __stella query parameter header"
   global :T, :timeout, Float, "HTTP request timeout (default: unlimited)"
   global :R, :remote, "Run command remotely (via blamestella.com)"
+  global :A, :account, String, "API account (overrides STELLA_ACCOUNT)"
+  global :K, :key, String, "API key (overrides STELLA_KEY)"
   global :p, :testplan, String, "Path to testplan"
   global :u, :usecase, String, "Only run usecases that match the given filter"
   global :f, :format, String, "Output format (partial support)" do |v|
