@@ -4,17 +4,16 @@ require 'stella'
 class Stella  
   class API
     include HTTParty
-    
     ssl_ca_file Stella::Client::SSL_CERT_PATH
     format :json
     attr_reader :httparty_opts, :response
-    def initialize user=nil, key=nil, httparty_opts={}
+    def initialize account=nil, key=nil, httparty_opts={}
       self.class.base_uri ENV['STELLA_HOST'] || 'https://www.blamestella.com/api/v2'
       @httparty_opts = httparty_opts
-      user ||= ENV['STELLA_USER']
+      account ||= ENV['STELLA_ACCOUNT']
       key ||= ENV['STELLA_KEY']
-      unless user.to_s.empty? || key.to_s.empty?
-        @httparty_opts[:basic_auth] ||= { :username => user, :password => key }
+      unless account.to_s.empty? || key.to_s.empty?
+        @httparty_opts[:basic_auth] ||= { :username => account, :password => key }
       end
     end
     def get path, params=nil
